<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_user_register">New User! Register</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="facebook">Facebook</string>
    <string name="arabic">عربي</string>
    <string name="twitter">Twitter</string>
    <string name="skip">Skip</string>
    <string name="buy_packages">BUY PACKAGES</string>
    <string name="forget_password">Forgot password</string>
    <string name="my_profile">My profile</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="category_name">Category Name</string>
    <string name="advertiser_name">Advertiser Name</string>
    <string name="date">Date</string>
    <string name="find">find</string>
    <string name="click_here_to_view_our">Click Here To View Our</string>
    <string name="terms_amp_conditions"><![CDATA[terms & conditions]]></string>
    <string name="about_app">About App</string>
    <string name="english">English</string>
    <string name="click_here">click here</string>
    <string name="choose_package">Choose Package</string>
    <string name="my_balance">My Balance</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="notifications">Notifications</string>
    <string name="active">active</string>
    <string name="expired">expired</string>
    <string name="user_registration">user registration</string>
    <string name="password">Password</string>
    <string name="sell_your_item">Sell your Item</string>
    <string name="title">Title</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select SubCategory</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="pin_on_map">Pin on map</string>
    <string name="area">Area</string>
    <string name="contact_number">Contact Number</string>
    <string name="automatic">AUTOMATIC</string>
    <string name="terms_amp_conditions_with_underline"><![CDATA[terms & conditions]]></string>
    <string name="chances_to">Chances to</string>
    <string name="win">win</string>
</resources>
