<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:layout_marginBottom="65dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textColor="#333333"
            android:textSize="16.67sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:textSize="13.87sp"
                android:layout_marginRight="15dp"
                android:background="@drawable/push"
                android:layout_alignParentRight="true"
                android:text="@string/active"
                android:id="@+id/active_button"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
            <Button
                android:textSize="13.87sp"
                android:background="@drawable/automatic"
                android:text="@string/expired"
                android:id="@+id/expired_button"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
        </LinearLayout>


    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/notification_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>