<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:isScrollContainer="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#333333">

        </View>

        <TextView
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Advanced search"
            android:textAllCaps="true"
            android:textColor="#333333"
            android:textSize="17.67sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#333333">

        </View>

    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/tools"
        xmlns:tool="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        tool:cardBackgroundColor="#fff"
        tool:cardCornerRadius="10dp"
        tool:cardPreventCornerOverlap="false"
        tool:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_keyword"
                android:textColor="#333333"
                android:textSize="13.5sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_background"
                    android:paddingLeft="5dp"
                    android:textColor="#333333"
                    android:textSize="15.75sp" />

                <ImageButton
                    android:layout_marginTop="4dp"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="search_button"
                    android:src="@drawable/search" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/category_name"
                android:textColor="#333333"
                android:textSize="13.5sp" />

            <EditText
                android:layout_width="match_parent"

                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background"
                android:paddingLeft="5dp"
                android:textColor="#333333"
                android:textSize="15.75sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/advertiser_name"
                android:textColor="#333333"
                android:textSize="13.5sp" />

            <EditText
                android:layout_width="match_parent"

                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background"
                android:paddingLeft="5dp"
                android:textColor="#333333"
                android:textSize="15.75sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/price"
                android:textColor="#333333"
                android:textSize="13.5sp" />

            <EditText
                android:layout_width="match_parent"

                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background"
                android:paddingLeft="5dp"
                android:textColor="#333333"
                android:textSize="15.75sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/date"
                android:textColor="#333333"
                android:textSize="13.5sp" />

            <EditText
                android:layout_width="match_parent"

                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background"
                android:paddingLeft="5dp"
                android:textColor="#333333"
                android:textSize="15.75sp" />

            <Button
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/reset_button_border"
                android:text="@string/find"
                android:textColor="#fff"
                android:textSize="13.87dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here_to_view_our"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <Button
                    android:layout_marginLeft="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/orange"
                    android:textSize="13sp" />


            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
</ScrollView>