<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/loginbg"
    android:padding="24dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_gravity="center"
        android:id="@+id/logo"
        android:layout_marginTop="72dp"
        android:src="@drawable/logo_login"
        android:layout_width="80dp"
        android:layout_height="80dp" />
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/user_layout"
        android:layout_below="@+id/logo"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="USERNAME"
            android:textColorHint="@color/colorPrimary">
            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textSize="15.75dp" />
        </android.support.design.widget.TextInputLayout>


        <ImageView
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/usernameicon"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="25dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_layout"
        android:layout_marginTop="35dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PASSWORD"
            android:textColorHint="@color/colorPrimary">
            <EditText
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textSize="15.75dp" />
        </android.support.design.widget.TextInputLayout>


        <ImageView
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/password_login" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:textSize="17sp"
        android:layout_marginTop="35dp"
        android:background="@drawable/login_btn_border"
        android:textColor="#fff"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/forgot_password_button"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/new_user_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/new_user_register"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13.55sp"
            android:textColor="#333333"
            android:layout_weight="0.9"
            android:text="@string/or_sign_in_with"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1.1"
            android:background="#333333"
            android:layout_width="0dp"
            android:layout_height="1dp">
        </View>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <LinearLayout
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:weightSum="2"
            android:background="@drawable/facebook_or_google_login_btn_bg"
            android:orientation="horizontal"
            android:layout_width="130dp"
            android:layout_height="match_parent">
            <ImageButton
                android:scaleY="1.5"
                android:scaleX="1.5"
                android:padding="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/facebookicon_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingStart="5dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:text="@string/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:gravity="center"
            android:background="@drawable/facebook_or_google_login_btn_bg"
            android:orientation="horizontal"
            android:layout_width="130dp"
            android:layout_height="match_parent">
            <ImageButton
                android:scaleY="1.5"
                android:scaleX="1.5"
                android:padding="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/twittericon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:text="@string/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textSize="15.75sp"
            android:id="@+id/skip_button"
            android:background="@android:color/transparent"
            android:textColor="#333333"
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>
</LinearLayout>

